--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Sporty by Quantifai — Support</h1>
   <p>Need help? You’re in the right place.</p>
   <h2>Contact Us</h2>
-  <p>Email: <a href="mailto:support@quantifai.tn">support@quantifai.tn</a></p>
+  <p>Email: <a href="mailto:sportyapp.tn@gmail.com">sportyapp.tn@gmail.com</a></p>
   <h2>FAQ</h2>
   <ul>
     <li>How to book a venue?</li>
