--- a/privacy.html
+++ b/privacy.html
@@ -17,8 +17,8 @@
   <h2>How We Use Data</h2>
   <p>To provide bookings, customer support, improve services, and comply with legal obligations.</p>
   <h2>Your Rights</h2>
-  <p>You can request data deletion or updates by emailing us at <a href="mailto:support@quantifai.tn">support@quantifai.tn</a>.</p>
+  <p>You can request data deletion or updates by emailing us at <a href="mailto:sportyapp.tn@gmail.com">sportyapp.tn@gmail.com</a>.</p>
   <h2>Contact</h2>
-  <p>Quantifai — Tunisia<br>Email: support@quantifai.tn</p>
+  <p>Quantifai — Tunisia<br>Email: sportyapp.tn@gmail.com</p>
 </body>
 </html>
